On desktop change the notification text to be an icon. On mobile make sure the number of notifications is visible.Closes #333

--- a/dt-assets/scss/_main.scss
+++ b/dt-assets/scss/_main.scss
@@ -86,6 +86,14 @@ NAVIGATION STYLES
 }
 #top-bar-menu {
     z-index: 999;
+    .dropdown.menu {
+        li {
+            margin: 0 10px;
+        }
+    }
+    img {
+        max-height:24px;
+    }
 }
 
 nav.second-bar {
